// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tagcloud vis toExpressionAst function should match snapshot params fulfilled with DatatableColumn vis_dimension.accessor at metric 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "bucket": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    0,
                  ],
                  "format": Array [
                    "terms",
                  ],
                  "formatParams": Array [
                    "{\\"id\\":\\"string\\",\\"otherBucketLabel\\":\\"Other\\",\\"missingBucketLabel\\":\\"Missing\\"}",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "maxFontSize": Array [
          15,
        ],
        "metric": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    1,
                  ],
                  "format": Array [
                    "number",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "minFontSize": Array [
          5,
        ],
        "orientation": Array [
          "single",
        ],
        "palette": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "name": Array [
                    "default",
                  ],
                },
                "function": "system_palette",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "scale": Array [
          "linear",
        ],
        "showLabel": Array [
          true,
        ],
      },
      "function": "tagcloud",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;

exports[`tagcloud vis toExpressionAst function should match snapshot params fulfilled with number vis_dimension.accessor at metric 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "bucket": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    0,
                  ],
                  "format": Array [
                    "terms",
                  ],
                  "formatParams": Array [
                    "{\\"id\\":\\"string\\",\\"otherBucketLabel\\":\\"Other\\",\\"missingBucketLabel\\":\\"Missing\\"}",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "maxFontSize": Array [
          15,
        ],
        "metric": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    1,
                  ],
                  "format": Array [
                    "number",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "minFontSize": Array [
          5,
        ],
        "orientation": Array [
          "single",
        ],
        "palette": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "name": Array [
                    "default",
                  ],
                },
                "function": "system_palette",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "scale": Array [
          "linear",
        ],
        "showLabel": Array [
          true,
        ],
      },
      "function": "tagcloud",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;

exports[`tagcloud vis toExpressionAst function should match snapshot without params 1`] = `
Object {
  "chain": Array [
    Object {
      "arguments": Object {
        "bucket": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    0,
                  ],
                  "format": Array [
                    "terms",
                  ],
                  "formatParams": Array [
                    "{\\"id\\":\\"string\\",\\"otherBucketLabel\\":\\"Other\\",\\"missingBucketLabel\\":\\"Missing\\"}",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "metric": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {
                  "accessor": Array [
                    1,
                  ],
                  "format": Array [
                    "number",
                  ],
                },
                "function": "visdimension",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "palette": Array [
          Object {
            "chain": Array [
              Object {
                "arguments": Object {},
                "function": "system_palette",
                "type": "function",
              },
            ],
            "type": "expression",
          },
        ],
        "showLabel": Array [
          false,
        ],
      },
      "function": "tagcloud",
      "type": "function",
    },
  ],
  "type": "expression",
}
`;
